--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "develop:search:build": "chokidar '**/*.elm' -c 'elm make src/SearchApp.elm --debug --output=dist/static/search/app.js'",
     "production:search:build": "elm make src/SearchApp.elm --optimize --output=dist/search/app.js",
     "production:records:build": "elm make src/RecordsApp.elm --optimize --output=dist/records/app.js",
-    "production:search:deploy": "./optimize.sh src/SearchApp.elm dist/static/search/app.js dist/static/search/app.min.js",
-    "production:records:deploy": "./optimize.sh src/RecordsApp.elm dist/static/records/app.js dist/static/records/app.min.js"
+    "production:search:deploy": "./optimize.sh src/SearchApp.elm dist/static/search/app.js dist/static/search/app.js",
+    "production:records:deploy": "./optimize.sh src/RecordsApp.elm dist/static/records/app.js dist/static/records/app.js"
   }
 }
