Fixed: Local development server crashing
The paths were originally changed to match the `dist` tree so that we could support nginx service from both dev and dist. However, the `develop:n:build` scripts now compile to `dist`, which means that we no longer need to keep these in sync.

Fixes #10

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "uglify-js": "^3.12.2"
   },
   "scripts": {
-    "develop:search": "elm-live src/SearchApp.elm -u --port 8001 --dir=./dev -- --output=dev/static/search/app.js --debug",
-    "develop:records": "elm-live src/RecordsApp.elm -u --port 8002 --dir=./dev -- --output=dev/static/records/app.js --debug",
+    "develop:search": "elm-live src/SearchApp.elm -u --port 8001 --dir=./dev/search -- --output=dev/search/app.js --debug",
+    "develop:records": "elm-live src/RecordsApp.elm -u --port 8002 --dir=./dev/records -- --output=dev/records/app.js --debug",
     "develop:records:build": "chokidar '**/*.elm' -c 'elm make src/RecordsApp.elm --debug --output=dist/static/records/app.js'",
     "develop:search:build": "chokidar '**/*.elm' -c 'elm make src/SearchApp.elm --debug --output=dist/static/search/app.js'",
     "production:search:build": "elm make src/SearchApp.elm --optimize --output=dist/static/search/app.js",
