--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "chokidar": "^3.5.1",
     "chokidar-cli": "^2.1.0",
     "elm-live": "^4.0.2",
+    "elm-review": "^2.5.2",
     "uglify-js": "^3.12.2"
   },
   "scripts": {
