--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "chokidar-cli": "^3.0.0",
     "elm-json": "^0.2.10",
     "elm-live": "^4.0.2",
+    "elm-optimize-level-2": "^0.2.3",
     "elm-review": "^2.5.2",
     "uglify-js": "^3.12.2"
   },
   "scripts": {
     "develop": "elm-live src/Main.elm -u --port 8002 --dir=./dist -- --output=dist/static/app.js --debug",
     "develop:build": "chokidar 'src/**/*.elm' -c 'elm make src/Main.elm --debug --output=dist/static/app.js'",
-    "production:build": "elm make src/Main.elm --optimize --output=dist/static/app.js",
+    "production:build": "elm-optimize-level-2 src/Main.elm --output=dist/static/app.js",
     "production:deploy": "./optimize.sh src/Main.elm dist/static/app.js dist/static/app.js"
   }
 }
